# ai-backend-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.gsd/: DECISIONS.md  JOURNAL.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STATE.md
.gsd/phases/1/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  06-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/2/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  06-PLAN.md  RESEARCH.md
.gsd/phases/3/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  06-PLAN.md  RESEARCH.md
.gsd/phases/4/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/5/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/6/: 01-PLAN.md  02-PLAN.md  03-PLAN.md  04-PLAN.md  05-PLAN.md  06-PLAN.md  07-PLAN.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/7/: VERIFICATION.md
app/: __init__.py  container.py  main.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  container.py
app/api/middleware/: __init__.py  error_handler.py  rate_limit.py  request_logging.py
app/api/routers/: __init__.py  chat.py  documents.py  search.py
app/api/schemas/: __init__.py  chat.py  common.py  document.py  search.py
app/application/: __init__.py
app/application/dto/: chat.py  document.py  search.py
app/application/services/: context_service.py  prompt_service.py
app/application/use_cases/: ingest_document.py  process_document.py  rag_chat.py  search_documents.py
app/core/: __init__.py
app/core/config/: settings.py
app/core/logging/: context.py  setup.py
app/core/security/: __init__.py  api_key.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
docs/: api-reference.md  architecture.md
knowledge-base/: 01-system-overview.md  02-layered-architecture.md  03-request-flow.md  04-database-redis.md  05-concurrency-and-consistency.md  06-scalability-strategy.md  07-best-practices-and-anti-patterns.md  README.md
scripts/: migrate.sql
terraform/bootstrap/: main.tf
tests/: conftest.py
tests/api/: test_health.py
(+81 files in other folders)
